// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides search when false 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday"
        />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`hides tags when false 1`] = `
<div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary"
  >
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}
    >
      <i
        className="icon-search locked-left soft-half-left"
      />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }
      >
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text"
      />
      <div
        className="one-whole text-left"
      >
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`renders with props 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday"
        />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses"
        />
      </div>
    </div>
  </div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary"
  >
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}
    >
      <i
        className="icon-search locked-left soft-half-left"
      />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }
      >
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text"
      />
      <div
        className="one-whole text-left"
      >
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`renders without campuses 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      >
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday"
        />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday"
        />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary"
    >
      <h4
        className="soft-half-bottom flush-bottom"
      >
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored"
      />
    </div>
  </div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary"
  >
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}
    >
      <i
        className="icon-search locked-left soft-half-left"
      />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }
      >
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text"
      />
      <div
        className="one-whole text-left"
      >
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`renders without tags 1`] = `
<div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary"
  >
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}
    >
      <i
        className="icon-search locked-left soft-half-left"
      />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }
      >
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text"
      />
      <div
        className="one-whole text-left"
      >
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`test hides search when false 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday" />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses" />
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses" />
      </div>
    </div>
  </div>
</div>
`;

exports[`test hides tags when false 1`] = `
<div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}>
      <i
        className="icon-search locked-left soft-half-left" />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }>
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text" />
      <div
        className="one-whole text-left">
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday" />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses" />
        <withRouter(Connect(TagWithoutData))
          urlKey="campuses" />
      </div>
    </div>
  </div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}>
      <i
        className="icon-search locked-left soft-half-left" />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }>
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text" />
      <div
        className="one-whole text-left">
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`test renders without campuses 1`] = `
<div>
  <div>
    <div
      className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Featured Tags
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData)) />
        <withRouter(Connect(TagWithoutData)) />
      </div>
    </div>
    <div
      className="soft-half-sides soft-ends text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Day of Week
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored">
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Sunday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Monday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Tuesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Wednesday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Thursday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Friday" />
        <withRouter(Connect(TagWithoutData))
          urlKey="schedules"
          val="Saturday" />
      </div>
    </div>
    <div
      className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
      <h4
        className="soft-half-bottom flush-bottom">
        Campuses
      </h4>
      <div
        className="two-thirds@anchored display-inline-block soft-ends@anchored" />
    </div>
  </div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}>
      <i
        className="icon-search locked-left soft-half-left" />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }>
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text" />
      <div
        className="one-whole text-left">
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;

exports[`test renders without tags 1`] = `
<div>
  <div
    className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
    <Form
      action={true}
      classes={
        Array [
          "hard",
          "display-inline-block",
          "one-whole",
        ]
      }
      submit={[Function]}>
      <i
        className="icon-search locked-left soft-half-left" />
      <span
        className="h7 locked-right flush-bottom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginTop": "-15px",
            "padding": "20px 0px",
            "zIndex": 1,
          }
        }>
        Cancel
      </span>
      <Input
        autoFocus={true}
        classes={
          Array [
            "hard-bottom",
            "soft-right",
            "push-double-right",
          ]
        }
        defaultValue="test"
        hideLabel={true}
        id="search"
        inputClasses="soft-double-left soft-half-bottom"
        name="search"
        onChange={[Function]}
        placeholder="Type your search here..."
        type="text" />
      <div
        className="one-whole text-left">
        <h6>
          <em>
            Find a group by zipcode, name, campus, or description
          </em>
        </h6>
      </div>
    </Form>
  </div>
</div>
`;
